# VLGL_ESP32

./: SEMINAR REPORT.pptx
Diagram/: Car.eap  HMI.eap  ScreenDiagram.qea
Final_Project/SquareLine_Project/libraries/ui/src/: CMakeLists.txt  filelist.txt  touch.h  ui.c  ui.h  ui_events.c  ui_events.h
Final_Project/SquareLine_Project/libraries/ui/src/components/: ui_comp_hook.c
Final_Project/SquareLine_Project/libraries/ui/src/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c
Final_Project/SquareLine_Project/ui/: ui.c  ui.h  ui.ino  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen5.c  ui_events.c  ui_img_1016388178.c  ui_img_1072028652.c  ui_img_1134473259.c  ui_img_2016198774.c  ui_img_325661808.c  ui_img_472371_png.c  ui_img_483416384.c  ui_img_568182_png.c  ui_img_582018047.c  ui_img_798946583.c  ui_img_950658400.c  ui_img_edited_png.c
Final_Screen/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
Final_Screen/images/: ui_img_1016388178.c  ui_img_1072028652.c  ui_img_1134473259.c  ui_img_2016198774.c  ui_img_325661808.c  ui_img_472371_png.c  ui_img_483416384.c  ui_img_568182_png.c  ui_img_582018047.c  ui_img_798946583.c  ui_img_edited_png.c
Final_Screen/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen5.c
